# ssbh_lib

./: .gitignore  Cargo.toml  README.md  architecture.md  release.toml  ssbh_exporting.md  ssbh_offsets.md
.github/workflows/: release.yml
src/: export.rs  formats.rs  lib.rs  main.rs
src/formats/: adj.rs  anim.rs  hlpb.rs  matl.rs  mesh.rs  meshex.rs  modl.rs  nrpd.rs  nufx.rs  shdr.rs  skel.rs
ssbh_data/: Cargo.toml  README.md  expand.rs
ssbh_data/fuzz/: Cargo.toml
ssbh_data/fuzz/fuzz_targets/: adj_from_data.rs  adj_to_data.rs  anim_from_data.rs  anim_to_data.rs  matl_from_data.rs  matl_to_data.rs  mesh_from_data.rs  mesh_to_data.rs  meshex_from_data.rs  meshex_to_data.rs  modl_from_data.rs  modl_to_data.rs  skel_from_data.rs  skel_to_data.rs
ssbh_data/src/: adj_data.rs  anim_data.rs  hlpb_data.rs  lib.rs  main.rs  matl_data.rs  mesh_data.rs  meshex_data.rs  modl_data.rs  shdr_data.rs  skel_data.rs
ssbh_data/src/anim_data/: anim_buffer.rs  bitutils.rs  buffers.rs  compression.rs
ssbh_data/src/mesh_data/: mesh_attributes.rs  vector_data.rs
ssbh_data_json/: Cargo.toml  README.md
ssbh_data_json/src/: main.rs
ssbh_exporter/: Cargo.toml
ssbh_exporter/src/: main.rs
ssbh_lib/: Cargo.toml  README.md
ssbh_lib/fuzz/: Cargo.toml
ssbh_lib/fuzz/fuzz_targets/: adj.rs  anim.rs  hlpb.rs  matl.rs  mesh.rs  meshex.rs  modl.rs  nlst.rs  nrpd.rs  nufx.rs  shdr.rs  skel.rs  ssbh_array.rs  ssbh_byte_buffer.rs
ssbh_lib/fuzz/src/: lib.rs
ssbh_lib/src/: arrays.rs  enums.rs  export.rs  formats.rs  lib.rs  ssbhenum.rs  strings.rs  vectors.rs
ssbh_lib/src/formats/: adj.rs  anim.rs  hlpb.rs  matl.rs  mesh.rs  meshex.rs  modl.rs  nlst.rs  nrpd.rs  nufx.rs  shdr.rs  skel.rs
ssbh_lib_json/: Cargo.toml  README.md  release.toml
ssbh_lib_json/src/: lib.rs  main.rs
ssbh_mesh_data/: Cargo.toml
ssbh_mesh_data/src/: lib.rs  main.rs
ssbh_test/: Cargo.toml  README.md
ssbh_test/src/: main.rs
ssbh_write/: Cargo.toml  README.md
ssbh_write/src/: lib.rs
ssbh_write/tests/: align_after.rs  alignment.rs  magic.rs  pad_after.rs  repr.rs  size_in_bytes.rs
ssbh_write_derive/: Cargo.toml  README.md
ssbh_write_derive/src/: lib.rs
