[package]
name = "ssbh_lib"
version = "0.2.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

[dependencies]
binread = "1.1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4.2"
byteorder = "1.4.2"

[features]
default = ["derive_serde"]
derive_serde = ["serde"]

[workspace]
members = [
    "ssbh_lib_json", "ssbh_data"
]
