[package]
name = "ssbh_lib"
version = "0.4.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

[dependencies]
ssbh_write_derive = { path = "ssbh_write_derive" }
binread = "2.0.0-beta.1"
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4.2"
byteorder = "1.4.2"
modular-bitfield = "0.11.2"
half = "1.7.1"

[features]
default = ["derive_serde"]
derive_serde = ["serde"]

[workspace]
members = [
    "ssbh_lib_json", "ssbh_data", "ssbh_write_derive"
]
