[package]
name = "ssbh_lib"
version = "0.6.1"
authors = ["ScanMountGoat <>"]
description = "Reading and writing SSBH file formats in Rust"
license = "MIT"
documentation = "https://docs.rs/ssbh_lib"
repository = "https://github.com/ultimate-research/ssbh_lib"
edition = "2018"

[dependencies]
ssbh_write_derive = { version = "0.5", path = "ssbh_write_derive" }
binread = "2.1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
hex = "0.4.2"
byteorder = "1.4.2"
half = "1.7.1"

[features]
default = ["derive_serde"]
derive_serde = ["serde"]

[workspace]
members = [ "ssbh_lib_json", "ssbh_data", "ssbh_write_derive" ]
default-members = [ "ssbh_lib_json", "ssbh_data", "ssbh_write_derive" ]