[package]
name = "ssbh_data"
version = "0.13.0"
authors = ["ScanMountGoat <>"]
description = "High level data access layer for SSBH formats"
license = "MIT"
documentation = "https://docs.rs/ssbh_data"
repository = "https://github.com/ultimate-research/ssbh_lib"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssbh_lib = { version = "^0.13", path = "../ssbh_lib", default_features = false }
ssbh_write = { version = "^0.14", path = "../ssbh_write" }
binread = "2.2.0"
half = "1.7"
geometry_tools = "0.4.0"
itertools = "0.10"
glam = "0.20.2"
bitvec = "1.0"
modular-bitfield = "0.11.2"
thiserror = "1.0.29"
ahash = "0.7.6"
serde = { version = "1.0", features = ["derive"], optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
strum = { version = "0.23", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.4"
hexlit = "0.5.3"
hex = "0.4.3"
pretty_assertions = "1.2.1"

# TODO: This should hopefully not be necessary in newer versions of Rust/cargo.
[features]
serde1 = ["serde", "ssbh_lib/serde", "ssbh_lib/serde_bytes"]
strum1 = ["strum", "ssbh_lib/strum"]