[package]
name = "ssbh_data"
version = "0.18.0"
authors = ["ScanMountGoat <>"]
description = "High level data access layer for SSBH formats"
license = "MIT"
documentation = "https://docs.rs/ssbh_data"
repository = "https://github.com/ultimate-research/ssbh_lib"
edition = "2021"

[dependencies]
ssbh_lib = { version = "^0.18", path = "../ssbh_lib", default_features = false }
ssbh_write = { version = "^0.18", path = "../ssbh_write" }
binrw = "0.14.0"
half = "2.1.0"
geometry_tools = "0.6.0"
itertools = "0.10"
glam = "0.28.0"
bitvec = "1.0"
modular-bitfield = "0.11.2"
thiserror = "1.0"
ahash = "0.8.8"
serde = { version = "1.0", features = ["derive"], optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5.1"
hexlit = "0.5.5"
hex = "0.4.3"
pretty_assertions = "1.4.0"

[features]
arbitrary = ["dep:arbitrary", "ssbh_lib/arbitrary"]
serde = ["dep:serde", "ssbh_lib/serde", "ssbh_lib/serde_bytes"]
strum = ["dep:strum", "ssbh_lib/strum"]
