[package]
name = "ssbh_data_json"
version = "0.14.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssbh_data = { version = "^0.14", path = "../ssbh_data", features = ["serde1"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
