[package]
name = "ssbh_lib"
version = "0.11.0"
authors = ["ScanMountGoat <>"]
description = "Reading and writing SSBH file formats in Rust"
license = "MIT"
documentation = "https://docs.rs/ssbh_lib"
repository = "https://github.com/ultimate-research/ssbh_lib"
edition = "2018"

[dependencies]
ssbh_write = { version = "^0.11", path = "../ssbh_write" }
binread = "2.1.1"
modular-bitfield = "0.11.2"
serde = { version = "1.0", features = ["derive"], optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11.5", optional = true }
hex = { version = "0.4.2", optional = true }

[dev-dependencies]
serde_json = "1.0"
hex = "0.4.2"
hexlit = "0.5.3"

[features]
default = ["serde", "serde_bytes"]
hex_buffer = ["serde", "hex"]
