[package]
name = "ssbh_lib"
version = "0.19.0"
authors = ["ScanMountGoat <>"]
description = "Reading and writing SSBH file formats in Rust"
license = "MIT"
documentation = "https://docs.rs/ssbh_lib"
repository = "https://github.com/ultimate-research/ssbh_lib"
edition = "2021"

[dependencies]
ssbh_write = { path = "../ssbh_write", version = "^0.19" }
binrw = "0.14.0"
modular-bitfield = "0.11.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11.5", optional = true }
hex = { version = "0.4.2", optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4.3"
hexlit = "0.5.5"

[features]
serde = ["dep:serde", "serde_bytes"]
serde_hex = ["serde", "hex"]
