[package]
name = "ssbh_lib_json"
version = "0.7.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssbh_lib = { version = "0.7", path = "../" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }