[package]
name = "ssbh_write"
version = "0.13.0"
description = "ssbh_lib write trait"
license = "MIT"
repository = "https://github.com/ultimate-research/ssbh_lib"
authors = ["ScanMountGoat <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssbh_write_derive = { version = "^0.14", path = "../ssbh_write_derive" }
