[package]
name = "ssbh_write"
version = "0.15.0"
description = "ssbh_lib write trait"
license = "MIT"
repository = "https://github.com/ultimate-research/ssbh_lib"
authors = ["ScanMountGoat <>"]
edition = "2021"

[dependencies]
ssbh_write_derive = { version = "^0.15", path = "../ssbh_write_derive" }
