[package]
name = "ssbh_write_derive"
version = "0.7.0"
description = "ssbh_lib export derive macro"
license = "MIT"
repository = "https://github.com/ultimate-research/ssbh_lib"
authors = ["ScanMountGoat <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
darling = "0.13.0"