[package]
name = "ssbh_write_derive"
version = "0.18.0"
description = "ssbh_write derive macro"
license = "MIT"
repository = "https://github.com/ultimate-research/ssbh_lib"
authors = ["ScanMountGoat <>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
